--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>Fale com a gente </title>
  <link rel="stylesheet" href="css/style.css">  
 </head>
 <body>
@@ -22,12 +23,13 @@
     <label for="end"> endereço:</label><br>
     <input type="text"><br>
     <label for="telefone">telefone:</label><br>
-    <input type="number" ><br>
+    <input type="number" ><br>  
     <label for="mensagem"> mensagem:</label><br>
-    <input type="text"><br>
+    <input type="text" id="msg"  ><br>
 
-    <input type="submit" value="enviar">
-    <input type="reset" value="limpar">
+    <button type="submit">Enviar</button>
+    <button type="reset">Limpar</button>
+</form>
 
 
 
@@ -36,13 +38,14 @@
 
 
 <footer>
-    <hr>
-<h3> Outras Formas de atendimento </h3>
+    
+<h3>  Outras Formas de atendimento </h3>
     <ul>
-        <li>whatsapp</li>
-        <li> <a href="brunooalvves123@gmail.com">brunooalvves123@gmail.com</a> </li>
-        <li>horário das 07hs as 13hs</li>
-      </ul>
+        <li> <a href="https://api.whatsapp.com/send?phone=5588981047218&text=ol%C3%A1" target="_blank">
+            <img src="imagem/Whats.png" alt="whats"></a>(88)9 8104-7218 </li> 
+        <li> <a href="mailto:brunooalvves123@gmail.com"target="_blank" ><img src="imagem/Gmail.png" alt="e-mail" ></a>BrunooAlvves123@gamil.com </li>
+        <li> <img src="imagem/time.png" alt="horas" > horário das 07hs as 13hs</li>
+    </ul>
 
 
 
