--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li> <a href="https://api.whatsapp.com/send?phone=5588981047218&text=ol%C3%A1" target="_blank">
             <img src="imagem/Whats.png" alt="whats"></a>(88)9 8104-7218 </li> 
         <li> <a href="mailto:brunooalvves123@gmail.com"target="_blank" ><img src="imagem/Gmail.png" alt="e-mail" ></a>BrunooAlvves123@gamil.com </li>
-        <li> <img src="imagem/time.png" alt="horas" > horário das 07hs as 13hs</li>
+        <li> <img src="imagem/time.png" alt="horas" > horário das 07hs as 13hs</li>.
     </ul>
 
 
